NetBSD Problem Report #50925

From www@NetBSD.org  Wed Mar  9 11:27:04 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 420FB7ABF7
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  9 Mar 2016 11:27:04 +0000 (UTC)
Message-Id: <20160309112703.6639A7ACC2@mollari.NetBSD.org>
Date: Wed,  9 Mar 2016 11:27:03 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.sbin/sup/source/cvt.c:48]: (error) Resource leak: fp
X-Send-Pr-Version: www-1.0

>Number:         50925
>Category:       bin
>Synopsis:       src/usr.sbin/sup/source/cvt.c:48]: (error) Resource leak: fp
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 09 11:30:00 +0000 2016
>Closed-Date:    Sat Mar 12 02:31:30 +0000 2016
>Last-Modified:  Sat Mar 12 02:31:30 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160308
>Organization:
>Environment:
>Description:

Source code is

    if (fprintf(fp, "%ld\n", b) < 0) {
        perror("fprintf");
        return 1;
    }


Suggest add missing call to fclose inside if.



>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50925 CVS commit: src/usr.sbin/sup/source
Date: Sat, 12 Mar 2016 02:27:31 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Mar 12 02:27:31 UTC 2016

 Modified Files:
 	src/usr.sbin/sup/source: cvt.c

 Log Message:
 Close file on error path. PR 50925 from David Binderman.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/usr.sbin/sup/source/cvt.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 12 Mar 2016 02:31:30 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.