Close file on error path. PR 50925 from David Binderman.